<resources>
    <string name="app_name">AndoridClass</string>

    <string name="menu_button">Buttons</string>
    <string name="menu_layout">Layout</string>
    <string name="menu_view">Tab Layout</string>

    <string name="button_tv_hello">Hello</string>
    <string name="button_tv_world">World</string>
    <string name="button_bt_switch">Switch</string>
    <string name="button_tv_nottrigger">Not triggered</string>
    <string name="button_tv_trigger">Triggered</string>
    <string name="button_bt_method1">Anonymous Classes</string>
    <string name="button_bt_method2">Custom Listener</string>
    <string name="button_bt_method3">Extend And Override</string>
    <string name="button_bt_method4">Xml Button Event</string>

    <string name="layout_tv_hello">Hello</string>
    <string name="layout_tv_world">World</string>
    <string name="layout_bt_change">Change Text</string>

    <string name="books_1">软件项目管理案例教程（第4版）</string>
    <string name="books_2">创新工程实践</string>
    <string name="books_3">信息安全数学基础（第2版）</string>
    <string name="recycleview_edit">Eidt</string>
    <string name="recycleview_add">Insert Before Item</string>
    <string name="recycleview_edit2">Edit Item </string>
    <string name="recycleview_delete">Delete Item</string>
    <string name="recycleview_name">Name</string>
    <string name="recycleview_save">Save</string>
    <string name="recycleview_cancel">Cancel</string>
    <string name="recycleview_deleteMessage">Are you sure to delete this item?</string>
    <string name="recycleview_deleteTitle">Delete Confirmation</string>
    <string name="recycleview_deleteConfirm">Delete</string>
    
    <string name="editBook_tv_name">Book Name</string>
    <string name="editBook_bt_save">Save</string>
    <string name="editBook_bt_cancel">Cancel</string>
    
    <string name="tab_book">图书</string>
    <string name="tab_news">新闻</string>
    <string name="tab_sell">卖家</string>
</resources>