<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    android:gravity="center">

    <Button
        android:id="@+id/main_bt_buttons"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/menu_button"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/main_bt_layout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/menu_layout"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/main_bt_recycler"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/menu_view"
        android:layout_marginBottom="20dp"/>

</LinearLayout>