<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingVertical="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_tv_hello"
            android:layout_marginRight="10dp"/>

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_tv_world"
            android:layout_marginRight="30dp"/>

        <Button
            android:id="@+id/bt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_bt_switch"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="80dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:gravity="center">

            <TextView
                android:id="@+id/tv3"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/button_tv_nottrigger"
                android:layout_marginRight="30dp"/>

            <Button
                android:id="@+id/bt2"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:text="@string/button_bt_method1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:gravity="center">

            <TextView
                android:id="@+id/tv4"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/button_tv_nottrigger"
                android:layout_marginRight="30dp"/>

            <Button
                android:id="@+id/bt3"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:text="@string/button_bt_method2"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:gravity="center">

            <TextView
                android:id="@+id/tv5"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/button_tv_nottrigger"
                android:layout_marginRight="30dp"/>

            <Button
                android:id="@+id/bt4"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:text="@string/button_bt_method3"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:gravity="center">

            <TextView
                android:id="@+id/tv6"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/button_tv_nottrigger"
                android:layout_marginRight="30dp"/>

            <Button
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:text="@string/button_bt_method4"
                android:onClick="click"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>