<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="30dp"
    android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editBook_tv_name"
            android:layout_marginEnd="20dp"/>

        <EditText
            android:id="@+id/editBook_et_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:singleLine="true"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/editBook_bt_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editBook_bt_save"
            android:layout_marginEnd="30dp"/>

        <Button
            android:id="@+id/editBook_bt_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editBook_bt_cancel"/>

    </LinearLayout>
</LinearLayout>