<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/layout_tv_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layout_tv_hello"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="100dp"
        app:layout_constraintEnd_toStartOf="@id/layout_tv_world"/>

    <TextView
        android:id="@+id/layout_tv_world"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/layout_tv_world"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="100dp"
        app:layout_constraintStart_toEndOf="@id/layout_tv_hello" />

    <Button
        android:id="@+id/layout_bt_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layout_bt_change"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/layout_tv_hello"
        app:layout_constraintEnd_toEndOf="@id/layout_tv_world"
        app:layout_constraintTop_toBottomOf="@id/layout_tv_hello"/>

</androidx.constraintlayout.widget.ConstraintLayout>